fixed dark mode button

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -159,7 +159,7 @@ body {
   text-align: center; }
 
 .container {
-  margin-top:30px;
+  margin-top:2rem;
   @media print {
     margin-top: 20px;
   }
