--- a/_sass/dark.scss
+++ b/_sass/dark.scss
@@ -33,5 +33,8 @@
   button:hover,button:focus{
       background-color: #ececec !important;
   }
+  .top{
+    background-color: #3f3f3f;
+  }
 }
 
