--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -16,12 +16,18 @@
   font-weight:500;
 }
 
+.top{
+  padding-top: 2rem; 
+  padding-bottom: 2rem; 
+  background-color: #d8d8d8;
+}
 
-@media screen and (max-width: 768px) {
-  .header-contianer div{
-    text-align: center;
+.header-contianer div{
+  @media screen and (max-width: 768px) {
+    text-align: center !important;
   }
-
+}
+@media screen and (max-width: 768px) {
   .header-right p {
     text-align: center;
   }
